With AgentTimeout set the content is allowed after meeting the agent delay time even if the DefaultResult is set to 1
Categories
(Firefox :: Data Loss Prevention, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox-esr128 | --- | unaffected |
firefox135 | --- | unaffected |
firefox136 | --- | unaffected |
firefox137 | --- | verified |
People
(Reporter: atrif, Assigned: handyman)
References
(Blocks 2 open bugs)
Details
Attachments
(2 files)
Found in
- 137.0a1 (2025-02-20)
window
Affected versions
- 137.0a1 (2025-02-20)
Tested platforms
- Affected platforms: Windows 10x64, Windows 11
- Unaffected platforms: Ubuntu 24, macOS
Preconditions
- Download the DLP test assets from https://drive.google.com/file/d/1yjqVRuxdKV3WnO7D2wzMgDXBuYBxUgVw/view
- Create a distribution folder inside the Firefox folder and paste the policies-4.json to it and then rename it to policies.json
- DLP Agent is running:
.\content_analysis_sdk_agent.exe --user --toblock=.*\d{3}-?\d{2}-?\d{4}.* --towarn=.*warn.* --delays=10
Steps to reproduce
- Paste a random string on the Wikipedia page.
- Wait 10 seconds without choosing any option on the warn dialog.
Expected result
- The content is not pasted until an option is chosen on the Warn dialog.
Actual result
- The content is pasted without choosing any option.
Regression range
- New feature. Happens after the implementation on bug 1894538.
Additional notes
- Attached a screen recording.
Reporter | ||
Updated•29 days ago
|
Assignee | ||
Comment 1•29 days ago
|
||
A WARN response needs to call Cancel
on the timeout timer in mUserActionMap.Lookup(aUserActionId)
. That would be done here.
Assignee | ||
Updated•29 days ago
|
Assignee | ||
Comment 2•29 days ago
|
||
We were timing out and enacting the timeout behavior while the user was
debating a response to the warn dialog.
Comment 4•28 days ago
|
||
bugherder |
Reporter | ||
Comment 5•28 days ago
•
|
||
Hello! I have verified that the string is no longer pasted with Firefox 137.0a1 (20250221095438) on Windows 10x64 after following the steps from comment 0.
Just to be safe I understand this correctly now after the Agent reaches the timeout timer the request is blocked and the OS notification is displayed. In this situation the WARN dialog should not be displayed and the request should be automatically blocked even with browser.contentanalysis.default_result:1
? Thank you!
Assignee | ||
Comment 6•28 days ago
|
||
Hi atrif. The situation you are describing is how that works since bug 1944395 went in. After that bug, the pref that governs this is browser.contentanalysis.timeout_result
-- the values have the same meaning as for the default_result
pref. But if the timeout_result
is set to warn then it should be showing the warn dialog.
Reporter | ||
Comment 7•22 days ago
•
|
||
(In reply to David Parks [:handyman] from comment #6)
Hi atrif. The situation you are describing is how that works since bug 1944395 went in. After that bug, the pref that governs this is
browser.contentanalysis.timeout_result
-- the values have the same meaning as for thedefault_result
pref. But if thetimeout_result
is set to warn then it should be showing the warn dialog.
Thank you for the response and sorry for late reply. I can confirm that with "TimeoutResult:1" policy the use content window is displayed and this issue is no longer reproducible with 137.0a1 (2025-02-27) on Windows 10x64.
Description
•