Bug 1949390: Cancel content analysis timeout timer when presenting warn dialog r=dlp-reviewers,gstoll

We were timing out and enacting the timeout behavior while the user was
debating a response to the warn dialog.

Differential Revision: https://phabricator.services.mozilla.com/D239045